--- a/contact.html
+++ b/contact.html
@@ -38,17 +38,18 @@
 
                 <section>
                      <div class="contact-container">
-                    <div class="page-title">
-                    <h1>Contact Us</h1>
-                    <form>
-                        <input type="text" placeholder="Full Name">
-                        <input type="email" placeholder="Email">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                        <button class="contact"><a href="#">Send To Me</a></button>
-                    </form>
-                </div>
-                </div>
-                
+                        <div class="hidden">
+                            <div class="page-title">
+                            <h1>Contact Us</h1>
+                            <form>
+                                <input type="text" placeholder="Full Name">
+                                <input type="email" placeholder="Email">
+                                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                                <button class="contact"><a href="#">Send To Me</a></button>
+                            </form>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
 
