--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <!----------Navigation Bar------->
           <section>
             <div class="nav">
-                <a href="index.html"><img src="img/logo.png" class="logo"></a>
-                <ul class="navbar">
+                <a href="index.html"><img src="img/logo.png" class="logo hidden"></a>
+                <ul class="navbar hidden">
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <a href="#" id="close"><i class="fa fa-times"></i></a>
                 </ul>
                 <div id="mobile">
-                <i id="menu" class="fas fa-outdent"></i>
+                    <i id="menu" class="fas fa-outdent"></i>
                 </div>
-                <div class="menu-buttons">
-                <a class="social-icons" href="contact.html" target="_blank"><i class="fab fa-dribbble"></i></a>
-                <button class="contact"><a href="contact.html">Contact Me</a></button>
+                <div class="menu-buttons hidden">
+                    <a class="social-icons" href="contact.html" target="_blank"><i class="fab fa-dribbble"></i></a>
+                    <button class="contact"><a href="contact.html">Contact Me</a></button>
             </div>
             </div>
         </section>
@@ -36,15 +36,15 @@
             <section>
             <div class="header-container">
                 <div class="cont-header">
-                    <div class="header-content">
+                    <div class="header-content hidden">
                         <span>Introducing</span>
                         <h1>Hello I'm Jessy Walter</h1>
                         <p>Since beginning my journey as a freelance designer nearby 7 years ago, I 've done remote work for agencies, consulted
                         for startup, and collaborated with talented people to create digital products.</p>
-                        <button class="contact"><a href="contact.html">Contact Me</a></button>
+                        <button class="contact hidden"><a href="contact.html">Contact Me</a></button>
 
                     </div>
-                    <div class="header-img">
+                    <div class="header-img hidden">
                         <img src="img/hero-img.png">
                     </div>
                 </div>
@@ -56,37 +56,37 @@
                 <div class="service-container">
                     <div class="cont-service">
                         <div class="service-imgs">
-                            <div class="service">
+                            <div class="service hidden">
                                 <i class="fa fa-regular fa-crosshairs"></i>
-                                   <h2>Product Design</h2> 
-                                   <p>The technological revolution is changing aspect</p> 
+                                <h2>Product Design</h2> 
+                                <p>The technological revolution is changing aspect</p> 
                             </div>
-                            <div class="service">
+                            <div class="service hidden">
                                 <i class="fa fas fa-venus-mars"></i>
-                            <h2>Logo Design</h2>
-                            <p>The technological revolution is changing aspect</p>
+                                <h2>Logo Design</h2>
+                                <p>The technological revolution is changing aspect</p>
                             </div>
-                            <div class="service">
-                            <i class="fa fa-regular fa-layer-group"></i>
-                            <h2>UI Design</h2>
-                            <p>The technological revolution is changing aspect</p>
+                            <div class="service hidden">
+                                <i class="fa fa-regular fa-layer-group"></i>
+                                <h2>UI Design</h2>
+                                <p>The technological revolution is changing aspect</p>
                             </div>
-                            <div class="service">
+                            <div class="service hidden">
                                 <i class="fa fa-light fa-swatchbook"></i>
-                            <h2>Icon Design</h2>
-                            <p>The technological revolution is changing aspect</p>
+                                <h2>Icon Design</h2>
+                                <p>The technological revolution is changing aspect</p>
                             </div>
                         </div>
                         <div class="service-content">
                             <span>My Skills</span>
-                            <h1>Why Hire Me For Next Project?</h1>
-                            <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the
-                            way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on
-                            your phone. There's no imperative to be an expert at doing everything when you can.</p>
-                            <button class="contact"><a href="#">Download CV</a></button>
-                        </div>
+                            <div class="hidden">
+                                <h1>Why Hire Me For Next Project?</h1>
+                                <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
+                                <button class="contact hidden"><a href="#">Download CV</a></button>
+                            </div>
                         </div>
                     </div>
+                </div>
             </section>
 
 
@@ -96,46 +96,55 @@
             <div class="portfolio-row1">
                 <div class="port-content">
                    <h6>Project 1</h6>
-                   <h1>Branding Nice Studio</h1>
-                   <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
-                   <a href="index.html" target="_self" class="button">
-                   <span class="arrow">&rarr;</span>
-                   <span>Read More</span></a>
+                    <div class="hidden">
+                         <h1>Branding Nice Studio</h1>
+                        <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
+                    </div>
+                   <a href="index.html" target="_self" class="read-more hidden">
+                        <span class="arrow">&rarr;</span>
+                        <span>Read More</span>
+                   </a>
                 </div>
                 <div class="port-img">
-                    <img src="img/portfolio-1-img.jpg">
+                    <img class="img rotating-img hidden" src="img/portfolio-1-img.jpg">
                 </div>
             </div>
             <div class="portfolio-row2">
                 <div class="port-img">
-                    <img src="img/portfolio-2-img.jpg">
+                    <img  class="img rotating-img hidden" src="img/portfolio-2-img.jpg">
                 </div>
                 <div class="port-content">
                     <h6>Project 2</h6>
-                    <h1>Mobile Card App</h1>
-                    <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
-                    <a href="index.html" target="_self" class="button">
-                    <span class="arrow">&rarr;</span>
-                    <span>Read More</span></a>
+                    <div class="hidden">
+                        <h1>Mobile Card App</h1>
+                        <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
+                    </div>
+                    <a href="index.html" target="_self" class="read-more hidden">
+                        <span class="arrow">&rarr;</span>
+                        <span>Read More</span>
+                    </a>
                 </div>
             </div>
             <div class="portfolio-row1">
                 <div class="port-content">
                     <h6>Project 3</h6>
-                    <h1>Resturant Landing Page</h1>
-                    <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
-                    <a href="index.html" target="_self">
-                    <span class="arrow">&rarr;</span>
-                    <span>Read More</span></a>
+                    <div class="hidden">
+                        <h1>Resturant Landing Page</h1>
+                        <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn. Factual knowledge is less prized when everything you ever need to know can be found on your phone. There's no imperative to be an expert at doing everything when you can.</p>
+                    </div>
+                    <a href="index.html" target="_self" class="read-more hidden">
+                        <span class="arrow">&rarr;</span>
+                        <span>Read More</span></a>
                 </div>
                 <div class="port-img">
-                    <img src="img/portfolio-3-img.jpg">
+                    <img class="img rotating-img hidden" src="img/portfolio-3-img.jpg">
                 </div>
             </div>
             <div class="button-container">
-              <a href="portfolio.html" class="button">
-              <span>View All</span></a>
+                <a href="portfolio.html" class="button">
+                <span>View All</span></a>
             </div>
+        </div>
     </section>
 
     <!----------Counter Section------->
@@ -143,20 +152,28 @@
        <div class="container">
         <div class="count-container">
             <div class="count-col col-1-border-radius" >
-                <span class="count" data-val="56">0</span>
-                <p>Happy Clients</p>
+                <div class="hidden">
+                    <span class="count" data-val="56">0</span>
+                    <p>Happy Clients</p>
+                </div>
             </div>
             <div class="count-col">
-                <span class="count" data-val="87">0</span>
-                <p>Projects Done</p>
+                <div class="hidden">
+                    <span class="count" data-val="87">0</span>
+                    <p>Projects Done</p>
+               </div>
             </div>
             <div class="count-col">
-                <span class="count" data-val="16">0</span>
-                <p>Awards Winning</p>
+                <div class="hidden">
+                    <span class="count" data-val="16">0</span>
+                    <p>Awards Winning</p>
+                </div>
             </div>
             <div class="count-col col-4-border-radius">
-                <span class="count" data-val="7">0</span>
-                <p>Years Experience</p>
+                <div class="hidden">
+                    <span class="count" data-val="7">0</span>
+                    <p>Years Experience</p>
+                </div>
             </div>
         </div>
        </div>
@@ -165,58 +182,57 @@
     <!----------Testimonial Section------->
 
     <section class="container-testimonial">
-        <div class="testimonial mySwiper">
+        <div class="testimonial mySwiper hidden">
             <div class="testi-content swiper-wrapper">
                 <div class="slide swiper-slide">
-                    <img src="img/test-img1.png" alt="" class="image" />
-                    <div class="testi-content">
-                    <i class="fa fa-solid fa-quote-left"></i>
-                    <p>The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex!</p>
-                    <span>Amman Payne</span>
-                    <h4>CEO of Figma</h4>
-                    </div>
+                        <img  class="image img" src="img/test-img1.png" alt="" />
+                        <div class="testi-content">
+                            <i class="fa fa-solid fa-quote-left"></i>
+                             <p>The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex!</p>
+                             <span>Amman Payne</span>
+                            <h4>CEO of Figma</h4>
+                        </div>
                 </div>
                 <div class="slide swiper-slide">
-                    <img src="img/test-img2.jpg" alt="" class="image" />
-                    <div class="testi-content">
-                        <i class="fa fa-solid fa-quote-left"></i>
-                        <p>The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex!</p>
-                        <span>Jared Warner</span>
-                        <h4>CEO of Figma</h4>
-                    </div>
+                        <img class="image img"  src="img/test-img2.jpg" alt="" />
+                        <div class="testi-content">
+                            <i class="fa fa-solid fa-quote-left"></i>
+                            <p>The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex!</p>
+                            <span>Jared Warner</span>
+                            <h4>CEO of Figma</h4>
+                        </div>
                 </div>
-             </div>
-            <div class="swiper-pagination"></div>
+            </div>
+                <div class="swiper-pagination"></div>
         </div>
     </section>
 
     <!----------working Together Section------->
 
     <div class="cont-to">
-        <div class="work-container">
+        <div class="work-container hidden">
             <hr><br>
             <h1>Lets Work Together</h1>
-            <p>The technological revolution is changing aspect of our lives, and the fabric of society itself. it's also changing the way we learn and what we learn</p>
-            <button class="contact"><a href="contact.html">Contact Me</a></button>
-
+            <p>The technological revolution is changing aspect of our lives, and the fabric of society<br> itself. it's also changing the way we learn and what we learn</p>
+            <button class="contact hidden"><a href="contact.html">Contact Me</a></button>
         </div>
     </div>
 
     <!----------Footer Section------->
     <section>
         <div class="footer">
-        <div class="col-1">
-        <a href="index.html"><img src="img/logo.png" class="logo"></a>
-        </div>
-        <div class="col-2">
-        <p>© 2023 Freelancer - Phlox Elementor WordPress Theme. All rights reserved.</p>
-        </div>
-        <div class="col-3">
-            <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-behance"></i></a>
-        </div>
+            <div class="col-1">
+                <a href="index.html"><img src="img/logo.png" class="logo"></a>
+            </div>
+            <div class="col-2">
+                <p>© 2023 Freelancer - Phlox Elementor WordPress Theme. All rights reserved.</p>
+            </div>
+            <div class="col-3">
+                <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="social-icons" href="index.html" target="_blank"><i class="fab fa-behance"></i></a>
+            </div>
         </div>
     </section>
  </main>
